--- a/index.html
+++ b/index.html
@@ -17,27 +17,25 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post">
-                    <p>
-                        <label for="iemail"><span class="material-symbols-outlined">
-                            person
-                        </span></label>
-                        <input type="email" name="email" id="iemail" placeholder="Seu e-mail">
-                    </p>
-                    <p>
-                        <label for="isen"><span class="material-symbols-outlined">
-                            key
-                        </span></label>
-                        <input type="password" name="sen" id="isen" placeholder="Sua senha">
-                    </p>
-                    <p>
+                <form action="login.php" method="post" autocomplete="on">
+                        <div class="campo">
+                            <span class="material-symbols-outlined">
+                                person
+                            </span>
+                            <input type="email" name="email" id="iemail" placeholder="Seu e-mail" autocomplete="email" required maxlength="50">
+                            <label for="iemail">login</label>
+                        </div>
+                        <div class="campo">
+                            <span class="material-symbols-outlined">
+                                key
+                            </span>
+                            <input type="password" name="sen" id="isen" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="30">
+                            <label for="isen">senha</label>
+                        </div>
                         <input type="submit" value="Entrar">
-                    </p>
-                    <p>
-                        <a href="#">Esqueci a senha <span class="material-symbols-outlined">
+                        <a href="#" class="botao">Esqueci a senha <span class="material-symbols-outlined">
                             mail
                         </span></a>
-                    </p>
                 </form>
             </div>
         </section>    
